draft: friend  system
